--- a/Frontend/tsconfig.app.json
+++ b/Frontend/tsconfig.app.json
@@ -23,5 +23,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["Frontend/src"]
+  "include": ["src"]
 }
