--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,7 +17,9 @@
     "framer-motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-leaflet": "^5.0.0",
     "react-router": "^7.8.2",
+    "react-router-dom": "^7.9.1",
     "tailwindcss": "^4.1.13",
     "zod": "^4.1.5"
   },
