--- a/BackEnd/greenEyeProject/appsettings.json
+++ b/BackEnd/greenEyeProject/appsettings.json
@@ -1,11 +1,11 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=db27685.public.databaseasp.net; Database=db27685; User Id=db27685; Password=nA?8M@7cm4Z#; Encrypt=False; MultipleActiveResultSets=True; "
-    //"DefaultConnection": "Server=DESKTOP-CM73NFQ;Database=GreenEyeDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+   // "DefaultConnection": "Server=DESKTOP-CM73NFQ;Database=GreenEyeDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "Jwt": {
     "Key": "this_is_a_super_secure_secret_key_12345",
-    "Issuer": "GreenEyeAPI",  
+    "Issuer": "GreenEyeAPI",
     "Audience": "GreenEyeUsers"
   },
   "Logging": {
@@ -22,8 +22,19 @@
     "Email": "mr0111071@gmail.com",
     "Password": "hyxp mlyu aldp teuj"
   },
+
   "AppSettings": {
-  // "FrontendUrl": "https://localhost:7063"
-    "FrontendUrl": "http://greeneye4424.runasp.net"
+    "FrontendUrls": [
+      "https://digitopia-project-seven.vercel.app",
+      "http://localhost:5173"
+    ],
+    "BackendUrl": "https://greenfootprint.runasp.net"
   }
+
+
+  //"AppSettings": {
+  //  // "FrontendUrl": "https://localhost:7063"ٍ
+  //  // "FrontendUrl": "http://localhost:5173"
+  //  "FrontendUrl": "https://greenfootprint.runasp.net"
+  //}
 }
